# trend7

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  mise.toml  slackbot.md
app/: app.R
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_section_confidence_columns.py  d1fbc9bc34d5_initial_migration_with_trends_tables.py
backend/app/: config.py  main.py  prompts.py
backend/app/api/v1/: __init__.py  analyze.py  articles.py  feedback.py  health.py  pitches.py  proactive.py  threads.py  topics.py  trends.py
backend/app/core/: clustering.py
backend/app/integrations/: article_loader.py  cache.py  infactory.py  trends.py
backend/app/models/: database.py  schemas.py
backend/app/services/: analyzer.py  block_formatter.py  confidence_calculator.py  pitch_generator.py  proactive_service.py  thread_service.py  trends_watch_service.py
backend/tests/: test_health.py
docs/: infactory-openapi.json  initial-analysis-of-api.md
frontend/: components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/types/: blocks.ts
frontend/components/ui/: checkbox.tsx  collapsible.tsx  combobox.tsx
scripts/: db_util.py  import_articles.py
spec/: environment-config.md  google-trends-integration.md  index.md  infactory-integration.md  pitch-generation.md  poc-architecture.md  shadcn-ui-integration.md  story-thread-surfacing-slack-bot.md  trends-with-sections-and-thresholds.md
(+12 files in other folders)
